feat(server): Integrate email and Ozow payment services

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,7 +16,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": ["compression"]
   },
   "include": [
     "src/**/*"
