--- a/server/.env
+++ b/server/.env
@@ -1,27 +1,27 @@
 # Server Configuration
 NODE_ENV=development
 PORT=5000
-CLIENT_URL=http://localhost:3000
+APP_ORIGIN=http://localhost:3000
 
 # Database Configuration
-DATABASE_PATH=../database.sqlite
+DATABASE_PATH=psql 'postgresql://neondb_owner:npg_C9mPvVgxj2QZ@ep-super-unit-adrcwuez-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_SECRET=supersecretjwtkeythatisatleast32characterslong
+
 
 # File Upload Configuration
 UPLOAD_PATH=../uploads
 MAX_FILE_SIZE=10485760
 
-# Email Configuration (for future use)
-EMAIL_SERVICE=gmail
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+# Email Configuration
+EMAIL_FROM=orders@modahaus.co.za
+RESEND_API_KEY=re_P1dJoFtr_EKoVbw7WaaAXTDZ2SHGDvTGX
 
-# Payment Configuration (Stripe - for future implementation)
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+# Payment Configuration (Ozow)
+OZOW_PRIVATE_KEY=83c17700af5c40049c0f89595c70ee5b
+OZOW_API_KEY=f1b50d3013ce4aa3a4f46352ecf8f59a
+OZOW_MERCHANT_ID=MODAHAUSPTYLTD597214BDB7
 
 # Other Services
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
