--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1",
     "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5"
+    "express-rate-limit": "^7.1.5",
+    "resend": "^3.1.0",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
