--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "modahaus-ecommerce",
+  "name": "modahaus-server",
   "version": "1.0.0",
-  "description": "Modahaus - Full Stack E-commerce Platform for Home & House Goods",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm run dev",
-    "client": "cd client && npm run dev",
-    "build": "cd client && npm run build",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install",
-    "seed": "cd server && npm run seed",
-    "setup": "npm run install-all && npm run seed"
+    "start": "node index.js"
   },
-  "keywords": ["ecommerce", "home-goods", "furniture", "react", "nodejs"],
-  "author": "MiniMax Agent",
-  "license": "MIT",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   }
 }
